<Added videos, fixed logo size>

--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -60,7 +60,7 @@
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center  header ">
   <div class="container d-flex align-items-center">
-    <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/visatoirelandlogo.jpg' %}" alt="" class="img-fluid"  style="margin-right:50px;"></a>
+    <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/irelandlogo.png' %}" alt="" class="img-fluid"  style="margin-right:50px; margin-left: 20px; width: 100px; height: 90px;"></a>
     <a href="#"> <img src="{% static 'assets/img/Animated-Flag-Ireland.gif' %}" style="height:40px;"> </a>
     <div class="nav-quote">
       <i style="color:black; text-align:left;">"Through Hard Times Prosperity"<br></i>
@@ -228,6 +228,11 @@
 <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
 <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
 <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+
+<!-- JS for carousel -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
 <!-- Template Main JS File -->
 <script src="{% static 'assets/js/main.js' %}"></script>
