--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -5,12 +5,13 @@
 <div>
   <div id="video-carousel-example2" class="carousel slide carousel-fade" data-ride="carousel">
     <!--Indicators-->
-    <!-- <ol class="carousel-indicators">
+    <ol class="carousel-indicators">
       <li data-target="#video-carousel-example2" data-slide-to="0" class="active"></li>
       <li data-target="#video-carousel-example2" data-slide-to="1"></li>
       <li data-target="#video-carousel-example2" data-slide-to="2"></li>
-    </ol> -->
+    </ol>
     <!--/.Indicators-->
+
     <!--Slides-->
     <div class="carousel-inner" role="listbox">
       <!-- First slide -->
@@ -19,7 +20,7 @@
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/ireland.mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/video(3).mp4' %}" type="video/mp4" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
@@ -28,7 +29,7 @@
         <div class="carousel-caption">
           <div class="animated fadeInDown">
             <h1 class = "EXP">Welcome To Ireland</h1>
-          </div>
+        </div>
         </div>
         <!--Caption-->
       </div>
@@ -38,7 +39,7 @@
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/ireland2.mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/video(2).mp4' %}" type="video/mp4" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
@@ -46,40 +47,41 @@
         <!--Caption-->
         <div class="carousel-caption">
           <div class="animated fadeInDown">
-            <h1 style="font-weight:600;  margin-top: -450px; font-family: Oswald; font-size:50px;">Welcome To Ireland</h1>
-          </div>
+            <h1 class = "EXP">Welcome To Ireland</h1>
+        </div>
         </div>
         <!--Caption-->
       </div>
+
       <!-- Slide 3  -->
-      <div class="carousel-item ">
+      <div class="carousel-item">
         <!--Mask color-->
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/ireland3.mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/video(4).mp4' %}" type="video/mp4" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
 
-        <!--Caption-->
-        <div class="carousel-caption">
-          <div class="animated fadeInDown">
-            <h1 style="font-weight:600;  margin-top: -450px; font-family: Oswald; font-size:50px;">Welcome To Ireland</h1>
-          </div>
-        </div>
-        <!--Caption-->
+       <!--Caption-->
+       <div class="carousel-caption">
+        <div class="animated fadeInDown">
+          <h1 class = "EXP">Welcome To Ireland</h1>
       </div>
+      </div>
+      <!--Caption-->
+      </div>
+</div>
       <!--Controls-->
-  <!-- <a class="carousel-control-prev" href="#video-carousel-example2" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#video-carousel-example2" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a> -->
-  <!--/.Controls-->
+      <a class="carousel-control-prev" href="#video-carousel-example2" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      </a>
+      <a class="carousel-control-next" href="#video-carousel-example2" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </a>
+      <!--/.Controls-->
+</div>
 </div>
 
 
