--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -20,7 +20,7 @@
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/video(3).mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/ireland.mp4' %}" type="video/mp4" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
@@ -39,7 +39,7 @@
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/video(2).mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/video(3).webm' %}" type="video/webm" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
@@ -59,7 +59,7 @@
         <div class="view">
           <!--Video source-->
           <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/video(4).mp4' %}" type="video/mp4" />
+            <source src="{% static 'assets/img/video(4).webm' %}" type="video/webm" />
           </video>
           <div class="mask rgba-indigo-light"></div>
         </div>
