<Added 3 pages, Fixed logo size, Added cards>

--- a/ireland_app/templates/aboutus.html
+++ b/ireland_app/templates/aboutus.html
@@ -45,8 +45,11 @@
     </div>
 
   </div>
-</section><!-- End About Section -->
 
+</section><!-- End About Section -->
+<div class="container" style="text-align: center;">
+<img src="{% static 'assets/img/aboutus.jpeg' %}" class="aboutus img-fluid" alt="">
+</div>
 <!-- ======= Why Us Section ======= -->
 <section >
   <div style="padding-top: 10px;">
