--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -89,7 +89,69 @@
 
   <main id="main">
 
+    <!-- ======= Services Section ======= -->
+    <section class="services">
+      <div class="container">
 
+        <div class="row">
+          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up"> -->
+            <div class="col-md-3 col-sm-4">
+            	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
+                  <a href="{% url 'studentvisa' %}">
+                    <div class="wrimagecard-topimage_header" style="text-align: center">
+                      <i class="bx bx-book-reader"></i>
+                    </div>
+                    <div class="wrimagecard-topimage_title" style="text-align: center;">
+                       <h4>Student VISA</h4>
+                    </div>
+                  </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-4">
+            	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
+                  <a href="{% url 'coming_soon' %}">
+                    <div class="wrimagecard-topimage_header" style="text-align: center">
+                      <i class="bx bx-briefcase"></i>
+                    </div>
+                    <div class="wrimagecard-topimage_title" style="text-align: center;">
+                       <h4>Work VISA</h4>
+                    </div>
+                  </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-4">
+            	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
+                  <a href="{% url 'coming_soon' %}">
+                    <div class="wrimagecard-topimage_header" style="text-align: center">
+                      <i class="bx bx-euro"></i>
+                    </div>
+                    <div class="wrimagecard-topimage_title" style="text-align: center;">
+                       <h4>Invester VISA</h4>
+                    </div>
+                  </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-4">
+            	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
+                  <a href="{% url 'coming_soon' %}">
+                    <div class="wrimagecard-topimage_header" style="text-align: center">
+                      <i class="bx bx-globe"></i>
+                    </div>
+                    <div class="wrimagecard-topimage_title" style="text-align: center;">
+                       <h4>Business VISA</h4>
+                    </div>
+                  </a>
+                </div>
+            </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Services Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
