--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -40,6 +40,54 @@
     .icons{
       width: 70px;
     }
+    #header .logo img {
+      padding-right: 0;
+      margin: 0;
+      max-height: 50px;
+}
+
+.wrimagecard{	
+	margin-top: 0;
+    margin-bottom: 1.5rem;
+    text-align: left;
+    position: relative;
+    background: #fff;
+    box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+.wrimagecard .bx{
+	position: relative;
+    font-size: 70px;
+}
+.wrimagecard-topimage_header{
+padding: 20px;
+}
+a.wrimagecard:hover, .wrimagecard-topimage:hover {
+    box-shadow: 2px 4px 8px 0px rgba(46,61,73,0.2);
+}
+.wrimagecard-topimage a {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.wrimagecard-topimage_title {
+    padding: 20px 24px;
+    height: 80px;
+    padding-bottom: 0.75rem;
+    position: relative;
+}
+.wrimagecard-topimage a {
+    border-bottom: none;
+    text-decoration: none;
+    color: #525c65;
+    transition: color 0.3s ease;
+}
+
+.aboutus{
+  width: 75%;
+}
+
     @media (max-width: 600px){
   .nav-quote {
       display: none;
@@ -58,15 +106,17 @@
 
 
 <!-- ======= Header ======= -->
-<header id="header" class="fixed-top d-flex align-items-center  header ">
+<header id="header" class="fixed-top d-flex align-items-center header">
   <div class="container d-flex align-items-center">
-    <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/irelandlogo.png' %}" alt="" class="img-fluid"  style="margin-right:50px; margin-left: 20px; width: 100px; height: 90px;"></a>
+     <div class="logo">
+    <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/irelandlogo.png' %}" alt="" class="img-fluid"  style="margin-right:50px; margin-left: 20px; "></a>
+  </div>
     <a href="#"> <img src="{% static 'assets/img/Animated-Flag-Ireland.gif' %}" style="height:40px;"> </a>
     <div class="nav-quote">
       <i style="color:black; text-align:left;">"Through Hard Times Prosperity"<br></i>
     </div>
       
-
+<!--student visa, work visa, invester visa, business visa-->
 
 
     <!-- <div class="logo">
@@ -168,9 +218,12 @@
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'index' %}">Home</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'aboutus' %}">About Us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'studentvisa' %}">Student visa </a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'shortvisa' %}">Short stay visa</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'longvisa' %}">Long stay visa</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'studentvisa' %}">Student VISA </a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Work VISA </a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Invester VISA </a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Business VISA </a></li>
+            <!-- <li><i class="bx bx-chevron-right"></i> <a href="{% url 'shortvisa' %}">Short stay visa</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'longvisa' %}">Long stay visa</a></li> -->
             <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Self employment visa</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#"> Investing visa</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Entrepreneur visa</a></li> -->
@@ -196,13 +249,25 @@
            </ul>
            </div>
 
-         <div class="col-lg-4 col-md-6 footer-newsletter">
+           <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Important Links</h4>
+            <ul>
+              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'terms' %}">Terms of Service</a> </li>
+              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'privacy_policy' %}">Privacy Policy</a> </li>
+              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'disclaimer' %}">Disclaimer</a> </li>
+ 
+            </ul>
+            </div>
+
+
+
+         <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
            <h4>Our Newsletter</h4>
             <form action="{% url 'coming_soon' %}" >
              <input type="email" name="email"><input type="submit" value="Subscribe">
            </form>
 
-         </div>
+         </div> -->
 
        </div>
      </div>
