--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -136,9 +136,10 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
 
         <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="{% url 'shortvisa' %}">Short Stay Visas</a></li>
-            <li><a href="{% url 'studentvisa' %}">Student visa</a></li>
-            <li><a href="{% url 'longvisa' %}">Long Stay Visas</a></li>
+            <li><a href="{% url 'studentvisa' %}">Student VISA</a></li>
+            <li><a href="{% url 'coming_soon' %}">Work VISA</a></li>
+            <li><a href="{% url 'coming_soon' %}">Invester VISA</a></li>
+            <li><a href="{% url 'coming_soon' %}">Business VISA</a></li>
             <!-- <li><a href="#">Drop Down 4</a></li> -->
           </ul>
         </li>
@@ -146,7 +147,7 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
         <li class="dropdown"><a href="#"><span>Migration Services</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
               <li>  <a href="{% url 'coming_soon' %}">Italy</a> </li>
-              <li>  <a href="{% url 'coming_soon' %}">Spain</a> </li>
+              <li>  <a href="http://visatospain.pro">Spain</a> </li>
               <li>  <a href="https://visatomalta.com/">Malta</a> </li>
               <li>  <a href="https://visatoportugal.pro/">Portugal</a> </li>
               <li>  <a href="{% url 'coming_soon' %}">Greece</a> </li>
@@ -235,7 +236,7 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
            <h4>Migration Services</h4>
            <ul>
              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Italy</a> </li>
-             <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Spain</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="http://visatospain.pro">Spain</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatomalta.com/">Malta</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatoportugal.pro/">Portugal</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Greece</a> </li>
