<Minor animations in about us>

--- a/ireland_app/templates/aboutus.html
+++ b/ireland_app/templates/aboutus.html
@@ -48,7 +48,7 @@
 
 </section><!-- End About Section -->
 <div class="container" style="text-align: center;">
-<img src="{% static 'assets/img/aboutus.jpeg' %}" class="aboutus img-fluid" alt="">
+<img src="{% static 'assets/img/aboutus.jpeg' %}" class="aboutus img-fluid" alt="" data-aos="fade-up" data-aos-delay="100">
 </div>
 <!-- ======= Why Us Section ======= -->
 <section >
