--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -43,8 +43,13 @@
     #header .logo img {
       padding-right: 0;
       margin: 0;
-      max-height: 50px;
+      max-height: 65px;
 }
+
+.goog-te-gadget-icon{
+  display:none;
+}
+
 
 .wrimagecard{	
 	margin-top: 0;
@@ -157,6 +162,7 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
               <li>  <a href="http://visatogermany.com/">Germany</a> </li>
               <li>  <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
               <li>  <a href="{% url 'coming_soon' %}">Denmark</a> </li>
+              <li>  <a href="https://visatoamerica.org/">USA</a> </li>
 
             </ul>
         </li>
@@ -246,6 +252,7 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
              <li> <i class="bx bx-chevron-right"></i> <a href="http://visatogermany.com/">Germany</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Denmark</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="https://visatoamerica.org/">USA</a> </li>
 
            </ul>
            </div>
