--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -91,6 +91,9 @@
 
     <!-- ======= Services Section ======= -->
     <section class="services">
+      <div style="text-align: center; text-decoration: solid; padding-bottom: 30px;">
+        <h2><b>Visa Services</b></h2>
+      </div>
       <div class="container">
 
         <div class="row">
