Added giving it back in Ireland

--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -263,7 +263,7 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
               <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'terms' %}">Terms of Service</a> </li>
               <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'privacy_policy' %}">Privacy Policy</a> </li>
               <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'disclaimer' %}">Disclaimer</a> </li>
- 
+              <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'givingitback' %}">Giving it back</a> </li>
             </ul>
             </div>
 
