--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -3,86 +3,157 @@
 {% block body_block %}
 
 <div>
-  <div id="video-carousel-example2" class="carousel slide carousel-fade" data-ride="carousel">
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-      <li data-target="#video-carousel-example2" data-slide-to="0" class="active"></li>
-      <li data-target="#video-carousel-example2" data-slide-to="1"></li>
-      <li data-target="#video-carousel-example2" data-slide-to="2"></li>
-    </ol>
-    <!--/.Indicators-->
+  <!--Carousel Wrapper-->
+<div id="carousel-example-1z" class="carousel slide carousel-fade " data-ride="carousel">
+  <!--Indicators-->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+     <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="4"></li> 
+    <li data-target="#carousel-example-1z" data-slide-to="5"></li> 
+  </ol>
 
-    <!--Slides-->
-    <div class="carousel-inner" role="listbox">
-      <!-- First slide -->
-      <div class="carousel-item active">
-        <!--Mask color-->
-        <div class="view">
-          <!--Video source-->
-          <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/ireland.mp4' %}" type="video/mp4" />
-          </video>
-          <div class="mask rgba-indigo-light"></div>
-        </div>
+  <!--/.Indicators-->
+  <!--Slides-->
+  <div class="carousel-inner" role="listbox">
+    <!--First slide-->
+    <div class="carousel-item active">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img1.jpeg' %}" alt="First slide">
 
-        <!--Caption-->
+       <div class="container">
+
         <div class="carousel-caption">
-          <div class="animated fadeInDown">
-            <h1 class = "EXP">Welcome To Ireland</h1>
-        </div>
-        </div>
-        <!--Caption-->
-      </div>
-      <!-- second slide -->
-      <div class="carousel-item">
-        <!--Mask color-->
-        <div class="view">
-          <!--Video source-->
-          <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/video(3).webm' %}" type="video/webm" />
-          </video>
-          <div class="mask rgba-indigo-light"></div>
-        </div>
 
-        <!--Caption-->
+          <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
+         
+          <h4 class="carousel-subtitle animated"style="background-color:23347C";></h4>
+
+        </div>
+      </div>
+    </div>
+    <!--/First slide-->
+
+    <!--Second slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img2.jpeg' %}" alt="Second slide">
+
+       <div class="container">
+
         <div class="carousel-caption">
-          <div class="animated fadeInDown">
-            <h1 class = "EXP">Welcome To Ireland</h1>
+
+          <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
+         
+
+          <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
+
         </div>
-        </div>
-        <!--Caption-->
       </div>
 
-      <!-- Slide 3  -->
-      <div class="carousel-item">
-        <!--Mask color-->
-        <div class="view">
-          <!--Video source-->
-          <video class="video-fluid" autoplay loop muted style="width:100%; height:75%;">
-            <source src="{% static 'assets/img/video(4).webm' %}" type="video/webm" />
-          </video>
-          <div class="mask rgba-indigo-light"></div>
-        </div>
+    </div>
+    <!--/Second slide-->
+    <!--Third slide-->
+     <div class="carousel-item">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img3.jpeg' %}" alt="Third slide">
 
-       <!--Caption-->
-       <div class="carousel-caption">
-        <div class="animated fadeInDown">
-          <h1 class = "EXP">Welcome To Ireland</h1>
+      <div class="container">
+
+        <div class="carousel-caption">
+
+          <h2 class="carousel-title animated" style="color: #fff; background:">Welcome to Ireland</h2>
+         
+
+          <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
+
+      
+        </div>
       </div>
+
+    </div>
+    <!--/Third slide-->
+
+    <!--Fourth slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img4.jpeg' %}" alt="Fourth slide">
+
+      <div class="container">
+
+        <div class="carousel-caption">
+
+          <h2 class="carousel-title animated" style="color: #fff">Welcome to Ireland</h2>
+         
+
+          <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
+
+      
+        </div>
       </div>
-      <!--Caption-->
+
+    </div>
+    <!--/Fourth slide-->
+
+    <!--Fifth slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img5.jpeg' %}" alt="Fifth slide">
+
+      <div class="container">
+
+        <div class="carousel-caption">
+
+          <h2 class="carousel-title animated" style="color: #fff">Welcome to Ireland</h2>
+         
+
+          <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
+
+      
+        </div>
       </div>
+
+    </div>
+    <!--/Fifth slide-->
+
+
+
+    <!--last slide-->
+    <div class="carousel-item">
+      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      src="{% static 'assets/img/img5.jpeg' %}" alt="Last slide">
+      <div class="container">
+
+        <div class="carousel-caption">
+
+          <h2 class="carousel-title animated" style="color: #fff";>Welcome to Ireland</h2>
+          
+
+          <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
+
+      
+        </div>
+      </div>
+
+    </div> 
+    <!--/last slide-->
+
+  </div>
+  <!--/.Slides-->
+  <!--Controls-->
+  <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  </a>
+  <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  </a>
+  <!--/.Controls-->
 </div>
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#video-carousel-example2" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </a>
-      <a class="carousel-control-next" href="#video-carousel-example2" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </a>
-      <!--/.Controls-->
+<!--/.Carousel Wrapper-->
 </div>
-</div>
+
+    
 
 
 
@@ -155,6 +226,12 @@
       </div>
     </section>
     <!-- End Services Section -->
+
+    <section style="padding-bottom: 0px;">
+      <div class="container" style="text-align: center;">
+        <img src="{% static 'assets/img/whyus.png' %}" alt="" class="img-fluid" style="width: 60%;">
+      </div>
+    </section>
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
