--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -14,6 +14,12 @@
   <link href="{% static 'assets/img/visatoirelandlogo.jpg' %}" rel="icon">
   <link href="{% static 'assets/img/visatoirelandlogo.jpg' %}" rel="apple-touch-icon">
 
+  <!-- For image while sharing link on social media -->
+<meta property="og:title" content="Visa To Greece">
+<meta property="og:description" content="Onward">
+<meta property="og:url" content="https://www.visatongreece.com/">
+<meta property="og:image" content="{% static 'assets/images/popup icon.png' %}">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
