Minor styling in Top bar

--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -41,7 +41,7 @@
 <body>
 <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
   <div class="container d-flex">
-    <div class="contact-info mr-auto">
+    <div class="contact-info mr-auto" style="margin-right:70%">
       <a href="#" class="envelope"><i class="bx bxl-envelope"></i> info@visatoireland.com </a>
       <a href="#" class="phone"><i class="bx bxl-phone"></i></i></a> Phone no.
     </div>
