About us image added

--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -227,95 +227,22 @@
     </section>
     <!-- End Services Section -->
 
-    <section style="padding-bottom: 0px;">
+    <div>
       <div class="container" style="text-align: center;">
-        <img src="{% static 'assets/img/whyus.png' %}" alt="" class="img-fluid" style="width: 60%;">
-      </div>
-    </section>
+      <!-- <img src="/static/assets/img/home.jpeg" class="img-fluid responsive"  alt=""> -->
+      <img src="{% static 'assets/img/aboutireland.png' %}" class="img-fluid responsive"  alt="" style="width: 90%;">
+        <!-- <img src="/static/assets/img/home.jpeg" class="img-fluid responsive"  alt=""> -->
+    <br>
+    </div>
+  </div>
 
-    <!-- ======= F.A.Q Section ======= -->
-    <section id="faq" class="faq">
-      <div class="container">
-
-        <div class="section-title" data-aos="zoom-out">
-          <h2></h2>
-          <p>About Ireland</p>
-        </div>
-
-        <ul class="faq-list">
-
-          <li>
-            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Population <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                4.92 million
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Language <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                English
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Capital City <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-              <p>
-              Dublin
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Size <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <p>
-              70,282 km2
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Currency <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Euro
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Climate<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Average daily temperatures of 14-16 degrees in summer, 4-7 degrees in winter
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">Other details<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq7" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                <p></p>
-                Democratic and stable political environment  <p></p>
-                Member of European Union with access to a potential market of 500 million people <p></p>
-                12.5% Corporate Tax Rate for companie <p></p>
-                11th best country in the world to do business (Forbes 2019)
-
-          </li>
-
-        </ul>
-
-      </div>
-    </section><!-- End F.A.Q Section -->
-
-
-
+  <div class="container" style="text-align: center;" id="whyus">
+    <!-- <img src="/static/assets/img/home.jpeg" class="img-fluid responsive"  alt=""> -->
+    <img src="{% static 'assets/img/whyus.png' %}" class="img-fluid responsive"  alt="">
+      <!-- <img src="/static/assets/img/home.jpeg" class="img-fluid responsive"  alt=""> -->
+  <br>
+  </div>
+</div>
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
