--- a/ireland_app/templates/aboutus.html
+++ b/ireland_app/templates/aboutus.html
@@ -50,13 +50,16 @@
 <div class="container" style="text-align: center;">
 <img src="{% static 'assets/img/aboutus.jpeg' %}" class="aboutus img-fluid" alt="" data-aos="fade-up" data-aos-delay="100">
 </div>
+
 <!-- ======= Why Us Section ======= -->
-<section >
+<section>
   <div style="padding-top: 10px;">
-    <div class="map" id="chartdiv" style="display: flex; width: 784px; height: 292px; margin:auto" width="784" height="292">
+    <div class="map" id="chartdiv" style="display: flex; width: 1000px; height: 450px; margin:auto" width="1000" height="450" overflow="hidden">
     <!-- <div class="map" id="chartdiv"></div> -->
   </div>
-</section><!-- End Why Us Section -->
+</div>
+</section>
+<!-- End Why Us Section -->
 
 </main>
 
@@ -64,6 +67,8 @@
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/themes/kelly.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <script src="{% static 'assets/js/map.js' %}"></script>
 
 
