--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -11,7 +11,8 @@
     <li data-target="#carousel-example-1z" data-slide-to="1"></li>
      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
     <li data-target="#carousel-example-1z" data-slide-to="4"></li> 
-    <li data-target="#carousel-example-1z" data-slide-to="5"></li> 
+    <li data-target="#carousel-example-1z" data-slide-to="5"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="6"></li>
   </ol>
 
   <!--/.Indicators-->
@@ -63,7 +64,7 @@
 
         <div class="carousel-caption">
 
-          <h2 class="carousel-title animated" style="color: #fff; background:">Welcome to Ireland</h2>
+          <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
          
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
@@ -122,7 +123,7 @@
     <!--last slide-->
     <div class="carousel-item">
       <img class="d-block w-100" style="height: 620px;object-fit: cover;"
-      src="{% static 'assets/img/img5.jpeg' %}" alt="Last slide">
+      src="{% static 'assets/img/img6.jpeg' %}" alt="Last slide">
       <div class="container">
 
         <div class="carousel-caption">
