Added Recaptcha in contact page

--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -26,7 +26,22 @@
        <div class="container">
 
         <div class="carousel-caption">
-
+          <!-- alert-messages for captcha -->
+            <div class="row login" style="    width: 100%;
+            text-align: center;
+            " class="row">
+            {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="background: transparent; border: 1px solid black;">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            {% endfor %}
+            {% endif %}
+            </div>
+            <!-- alert-messages-ends -->
           <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
          
           <h4 class="carousel-subtitle animated"style="background-color:23347C";></h4>
