--- a/ireland_app/templates/contactus.html
+++ b/ireland_app/templates/contactus.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block body_block %}
 
+<!-- Captcha -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <!-- ======= Contact Section ======= -->
 <section id="contact" class="contact">
   <div class="container">
@@ -24,7 +27,8 @@
           <div class="email">
             <i class="bi bi-envelope"></i>
             <h4>Email:</h4>
-            <p>info@visatoireland.com</p>
+            <a href="mailto:info@visatoireland.com">
+            <p>info@visatoireland.com</p></a>
           </div>
 
           <div class="phone">
@@ -36,8 +40,13 @@
         </div>
 
       </div>
+      <div class="row">
 
-      <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
+        <div class="col-lg-6 ">
+          <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+        </div>
+
+       <div class="col-lg-6">
 
         <form method="POST">{% csrf_token %}
         <div class="form-row">
@@ -62,12 +71,37 @@
           <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
           <div class="validate"></div>
         </div>
+        <div class="form-group mt-3">
+          <!-- alert-messages for captcha -->
+            <div class="row login" style=" width: 100%;
+            text-align: center;
+            " class="row">
+            {% if messages %}
+            {% for message in messages %}
+            {% if message.tags == 'info' %}
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {% else %}
+                <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert"></div>
+                {% endif %}
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="background: transparent; border: 1px solid black;">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            {% endfor %}
+            {% endif %}
+            </div>
+          <!-- alert-messages-ends -->
+</div>
         <!-- <div class="mb-3">
           <div class="loading">Loading</div>
           <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div> -->
-        <div class="text-center"><button class="submit1" style="background: #ef6603; border-radius: 50px;border:0;  padding: 10px 24px;  color: #fff;  transition: 0.4s;"type="submit">Send Message</button></div>
+        <div class="form-group mt-3">
+          <div class="g-recaptcha" data-sitekey="{{SITE_KEY}}"></div>
+        </div>
+        <div class="text-center"><input class="submit1" style="background: #ef6603; border-radius: 50px;border:0;  padding: 10px 24px;  color: #fff;  transition: 0.4s;"type="submit" value = "Send Message"></div>
       </form>
       </div>
 
@@ -75,4 +109,42 @@
 
   </div>
 </section><!-- End Contact Section -->
+<style>
+  #chartdiv {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    padding-bottom: 30px;
+  }
+  </style>
+ 
+  <section>
+ 
+    <div class="section-title">
+ 
+      <h1 style="text-align: center; padding-bottom: 20px;">Countries we serve</h1>
+      <p></p>
+    </div>
+ 
+    <div class="map" id="chartdiv">
+      <div style="width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    left: -0.5px;
+    top: -0.5px;">
+ 
+    </div>
+    <!-- <div class="map" id="chartdiv"></div> -->
+ 
+  </section>
+ <!-- End Why Us Section -->
+
+<!-- MAPS -->
+<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/themes/kelly.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+<script src="{% static 'assets/js/map.js' %}"></script>
 {% endblock %}
