added work visa page and minor changes in carousel

--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -10,9 +10,9 @@
     <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-1z" data-slide-to="1"></li>
      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-    <li data-target="#carousel-example-1z" data-slide-to="4"></li> 
+    <li data-target="#carousel-example-1z" data-slide-to="3"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="4"></li>
     <li data-target="#carousel-example-1z" data-slide-to="5"></li>
-    <li data-target="#carousel-example-1z" data-slide-to="6"></li>
   </ol>
 
   <!--/.Indicators-->
@@ -20,8 +20,8 @@
   <div class="carousel-inner" role="listbox">
     <!--First slide-->
     <div class="carousel-item active">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
-      src="{% static 'assets/img/img1.jpeg' %}" alt="First slide">
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
+      src="{% static 'assets/img/img5.jpeg' %}" alt="First slide">
 
        <div class="container">
 
@@ -43,7 +43,7 @@
             </div>
             <!-- alert-messages-ends -->
           <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
-         
+
           <h4 class="carousel-subtitle animated"style="background-color:23347C";></h4>
 
         </div>
@@ -53,15 +53,15 @@
 
     <!--Second slide-->
     <div class="carousel-item">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
-      src="{% static 'assets/img/img2.jpeg' %}" alt="Second slide">
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
+      src="{% static 'assets/img/img4.jpeg' %}" alt="Second slide">
 
        <div class="container">
 
         <div class="carousel-caption">
 
           <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
-         
+
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
 
@@ -72,7 +72,7 @@
     <!--/Second slide-->
     <!--Third slide-->
      <div class="carousel-item">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
       src="{% static 'assets/img/img3.jpeg' %}" alt="Third slide">
 
       <div class="container">
@@ -80,11 +80,11 @@
         <div class="carousel-caption">
 
           <h2 class="carousel-title animated" style="color: #fff;">Welcome to Ireland</h2>
-         
+
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
 
-      
+
         </div>
       </div>
 
@@ -93,19 +93,19 @@
 
     <!--Fourth slide-->
     <div class="carousel-item">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
-      src="{% static 'assets/img/img4.jpeg' %}" alt="Fourth slide">
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
+      src="{% static 'assets/img/img1.jpeg' %}" alt="Fourth slide">
 
       <div class="container">
 
         <div class="carousel-caption">
 
           <h2 class="carousel-title animated" style="color: #fff">Welcome to Ireland</h2>
-         
+
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
 
-      
+
         </div>
       </div>
 
@@ -114,19 +114,19 @@
 
     <!--Fifth slide-->
     <div class="carousel-item">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
-      src="{% static 'assets/img/img5.jpeg' %}" alt="Fifth slide">
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
+      src="{% static 'assets/img/img2.jpeg' %}" alt="Fifth slide">
 
       <div class="container">
 
         <div class="carousel-caption">
 
           <h2 class="carousel-title animated" style="color: #fff">Welcome to Ireland</h2>
-         
+
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
 
-      
+
         </div>
       </div>
 
@@ -137,22 +137,22 @@
 
     <!--last slide-->
     <div class="carousel-item">
-      <img class="d-block w-100" style="height: 620px;object-fit: cover;"
+      <img class="d-block w-100" style="height: 760px;object-fit: cover;"
       src="{% static 'assets/img/img6.jpeg' %}" alt="Last slide">
       <div class="container">
 
         <div class="carousel-caption">
 
           <h2 class="carousel-title animated" style="color: #fff";>Welcome to Ireland</h2>
-          
+
 
           <h4 class="carousel-subtitle animated"style="background-color:#404040cc";></h4>
 
-      
+
         </div>
       </div>
 
-    </div> 
+    </div>
     <!--/last slide-->
 
   </div>
@@ -169,7 +169,7 @@
 <!--/.Carousel Wrapper-->
 </div>
 
-    
+
 
 
 
@@ -200,7 +200,7 @@
 
             <div class="col-md-3 col-sm-4">
             	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
-                  <a href="{% url 'coming_soon' %}">
+                  <a href="{% url 'workvisa' %}">
                     <div class="wrimagecard-topimage_header" style="text-align: center">
                       <i class="bx bx-briefcase"></i>
                     </div>
