--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -71,7 +71,7 @@
           <ul>
             <li><a href="{% url 'studentvisa' %}">Student VISA</a></li>
             <li><a href="{% url 'workvisa' %}">Work VISA</a></li>
-            <li><a href="{% url 'coming_soon' %}">Invester VISA</a></li>
+            <li><a href="{% url 'investorvisa' %}">Invester VISA</a></li>
             <li><a href="{% url 'coming_soon' %}">Business VISA</a></li>
           </ul>
         </li>
@@ -133,7 +133,7 @@
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'aboutus' %}">About Us</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'studentvisa' %}">Student VISA </a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'workvisa' %}">Work VISA </a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Invester VISA </a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'investorvisa' %}">Invester VISA </a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Business VISA </a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'contactus' %}">Contact Us</a></li>             <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li> -->             <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
            </ul>
