--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -213,7 +213,7 @@
 
             <div class="col-md-3 col-sm-4">
             	<div class="wrimagecard wrimagecard-topimage" data-aos="fade-up" data-aos-delay="100">
-                  <a href="{% url 'coming_soon' %}">
+                  <a href="{% url 'investorvisa' %}">
                     <div class="wrimagecard-topimage_header" style="text-align: center">
                       <i class="bx bx-euro"></i>
                     </div>
